syntax = "proto3";

package sol.programs.v1;

message Instructions {
  repeated Instruction instructions = 1;
}

message Instruction {
  string program_id = 1;
  repeated string accounts = 2;
  string data = 3;

  uint64 slot_number = 4;
  string block_hash = 5;
}
